examples/test/testpolicy13333.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13333
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key28: value25
      key30: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value11
          key12: value32
          key5: value5
      podSelector:
        matchLabels:
          key36: value7
          key11: value9
